--- a/PRM.Core/PRM.Core.csproj
+++ b/PRM.Core/PRM.Core.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Utils\mRemoteNG\mRemoteNGImporter.cs" />
     <Compile Include="Utils\OnlyOneAppInstanceHelper.cs" />
     <Compile Include="Utils\MouseMiddleClick.cs" />
+    <Compile Include="Utils\RemoteFolder\MountFolderAsDisk.cs" />
     <Compile Include="Utils\UpdateChecker.cs" />
     <Compile Include="PRMVersion.cs" />
     <Compile Include="Properties\Annotations.cs" />
